add gms backend

--- a/BlazorApp7/BlazorApp7/appsettings.json
+++ b/BlazorApp7/BlazorApp7/appsettings.json
@@ -1,7 +1,8 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-BlazorApp7-ee61b0c1-f77e-423d-b2c0-f51cca65389e;Trusted_Connection=True;MultipleActiveResultSets=true"
-  },
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-BlazorApp7-ee61b0c1-f77e-423d-b2c0-f51cca65389e;Trusted_Connection=True;MultipleActiveResultSets=true",
+        "GMS": "Server=(localdb)\\mssqllocaldb;Database=GMSDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+    },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
