--- a/BlazorApp7.GMS/BlazorApp7.GMS.csproj
+++ b/BlazorApp7.GMS/BlazorApp7.GMS.csproj
@@ -7,13 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Bogus" Version="35.6.1" />
     <PackageReference Include="MediatR" Version="12.4.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.0" />
 	<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.0" /> 
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Commands\" />
   </ItemGroup>
 </Project>
