--- a/BlazorApp7/BlazorApp7/BlazorApp7.csproj
+++ b/BlazorApp7/BlazorApp7/BlazorApp7.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
@@ -25,5 +25,9 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
   </ItemGroup>
-
+	
+    <Target Name="NpmRunBuild" BeforeTargets="BeforePublish">
+	    <Exec Command="npm ci" />
+	    <Exec Command="npm run build:css" />
+    </Target>
 </Project>
