--- a/BlazorApp7/BlazorApp7/package.json
+++ b/BlazorApp7/BlazorApp7/package.json
@@ -1,17 +1,12 @@
 {
-  "name": "blazorapp7",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "philou",
-  "license": "ISC",
-  "description": "",
-  "devDependencies": {
-    "autoprefix": "^1.0.1",
-    "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.15"
-  }
+    "scripts": {
+        "build:css": "postcss ./styles/app.src.css -o wwwroot/css/app.css",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "devDependencies": {
+        "autoprefixer": "^10.4.20",
+        "postcss": "^8.4.49",
+        "postcss-cli": "^10.1.0",
+        "tailwindcss": "^3.4.15"
+    }
 }
