--- a/BlazorApp7/BlazorApp7/BlazorApp7.csproj
+++ b/BlazorApp7/BlazorApp7/BlazorApp7.csproj
@@ -24,6 +24,7 @@
 
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Components\Shared\" />
   </ItemGroup>
 	
     <Target Name="NpmRunBuild" BeforeTargets="BeforePublish">
