Move ef to infrastructure project

--- a/BlazorApp7/BlazorApp7.Client/BlazorApp7.Client.csproj
+++ b/BlazorApp7/BlazorApp7.Client/BlazorApp7.Client.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\BlazorApp7.Components\BlazorApp7.Components.csproj" />
+    <ProjectReference Include="..\..\BlazorApp7.Domain\BlazorApp7.Domain.csproj" />
   </ItemGroup>
 	
 </Project>
