--- a/BlazorApp7.Domain/BlazorApp7.Domain.csproj
+++ b/BlazorApp7.Domain/BlazorApp7.Domain.csproj
@@ -9,8 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Bogus" Version="35.6.1" />
     <PackageReference Include="MediatR" Version="12.4.1" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.0" />
-	<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.0" /> 
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="9.0.0" />
   </ItemGroup>
 </Project>
