--- a/BlazorApp7/BlazorApp7/BlazorApp7.csproj
+++ b/BlazorApp7/BlazorApp7/BlazorApp7.csproj
@@ -12,6 +12,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\BlazorApp7.Components\BlazorApp7.Components.csproj" />
     <ProjectReference Include="..\..\BlazorApp7.Domain\BlazorApp7.Domain.csproj" />
+    <ProjectReference Include="..\..\BlazorApp7.Infrastructure\BlazorApp7.Infrastructure.csproj" />
     <ProjectReference Include="..\..\BlazorApp7.ServiceDefaults\BlazorApp7.ServiceDefaults.csproj" />
     <ProjectReference Include="..\BlazorApp7.Client\BlazorApp7.Client.csproj" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="9.0.0" />
