Add user management admin page

--- a/BlazorApp7/BlazorApp7/package.json
+++ b/BlazorApp7/BlazorApp7/package.json
@@ -1,6 +1,6 @@
 {
     "scripts": {
-        "build:css": "postcss ./styles/app.src.css -o wwwroot/css/app.css",
+        "build:css": "postcss ./styles/app.src.css -o ./wwwroot/css/app.css",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "devDependencies": {
