--- a/BlazorApp7/BlazorApp7/BlazorApp7.csproj
+++ b/BlazorApp7/BlazorApp7/BlazorApp7.csproj
@@ -25,6 +25,7 @@
 
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="wwwroot\css\" />
   </ItemGroup>
 	
     <Target Name="NpmRunBuild" BeforeTargets="BeforePublish">
